added handling of PresentPropertyJsonHierarchy type in JsonTypeResolverFactory causing illegal argument exception